# Smart-Grid

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.edge  LICENSE  PARTNER_INTEGRATION_SUMMARY.md  PARTNER_QUICK_START.md  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
artifacts/models/: mr_11647df2.json  mr_4874e33c.json  mr_514fbc21.json  mr_7a32ac44.json  mr_7ab9e7dc.json  mr_8da93d84.json  mr_b683ea5e.json  mr_d8d2bc3a.json  mr_e48253f2.json  mr_f978fe66.json  prod_model.json
data/: sample_training_readings.csv
docs/: API.md  ARCHITECTURE.md  AUTH.md  CONTROL_LOGIC.md  EDGE_GATEWAY.md  HISTORICAL_APPENDIX.md  MIGRATION_NOTES.md  NEXT_STEPS_EDGE_IMPLEMENTATION.md  SIMULATION.md  alerting-system.md  backend-structure.md  batch-first-roadmap.md  data-engineering.md  data-model-and-migrations.md  deployment.md  frontend-integration.md  gap-analysis-and-upgrade.md  model-production-path.md  partner-integration-api.md  partner-integration-implementation.md  partner-security-policy.md  pricing-and-roi.md  rbac-auth.md  system-architecture.md
examples/: roi_input_steel_6site.json
openapi/: openapi.v1.yaml
postman/: EnergyAllocation.local.postman_environment.json  EnergyAllocation.postman_collection.json
scripts/: check_file_headers.py  edge_poll_demo.py  predict_batch_model.py  smoke_api.py  smoke_frontend_backend.py  smoke_partner_integrations.py  smoke_pipeline.py  train_batch_model.py
src/energy_api/: __init__.py  (+5 more)
ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json
(+154 files in other folders)
