[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energyallocation"
version = "0.1.0"
description = "Deterministic control-loop backend for distributed energy management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.116.0",
	"httpx>=0.28.0",
	"pymodbus>=3.6.8",
	"psycopg[binary]>=3.2.0",
	"PyJWT>=2.9.0",
	"uvicorn[standard]>=0.35.0",
]

[project.scripts]
energy-api = "energy_api.main:run"
energy-edge = "energy_api.edge.main:run"
energy-edge-sim = "energy_api.edge.simulation.server_main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
